adapt market_state.py; bring in working websocket + add ES futures dataframes

--- a/services/api/requirements.txt
+++ b/services/api/requirements.txt
@@ -1,12 +1,7 @@
 fastapi
-uvicorn
+uvicorn[standard]
 pandas
 numpy
-# pandas-ta
-polygon-api-client
-google-generativeai
-python-dotenv
+pydantic
 websockets
-scikit-learn
-base58
-yfinance
+python-multipart
