--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -15,11 +15,12 @@
         "@flint/ui": "*",
         "axios": "^1.13.2",
         "clsx": "^2.1.1",
+        "eslint-config-next": "^16.1.1",
         "framer-motion": "^11.9.0",
         "lightweight-charts": "^4.2.3",
-        "next": "^14.2.15",
-        "react": "^18.3.1",
-        "react-dom": "^18.3.1",
+        "next": "^16.1.1",
+        "react": "^19.2.3",
+        "react-dom": "^19.2.3",
         "react-icons": "^5.5.0",
         "tailwind-merge": "^2.5.3"
     },
