--- a/apps/desktop/tsconfig.json
+++ b/apps/desktop/tsconfig.json
@@ -21,15 +21,13 @@
       ]
     },
     "noEmit": true,
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     /* Linting */
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true,
-    "types": [
-      "vite/client"
-    ],
+    "types": [],
     "allowJs": true,
     "incremental": true,
     "esModuleInterop": true
