--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -37,5 +37,9 @@
         "tailwindcss": "^3.4.14",
         "typescript": "^5.6.2",
         "wait-on": "^8.0.1"
+    },
+    "overrides": {
+        "react": "$react",
+        "react-dom": "$react-dom"
     }
 }
