--- a/package.json
+++ b/package.json
@@ -9,5 +9,6 @@
     "dev:desktop": "npm run dev -w apps/desktop",
     "dev:web": "npm run dev -w apps/web",
     "electron": "npm run electron -w apps/desktop"
-  }
+  },
+  "dependencies": {}
 }
