--- a/apps/desktop/tsconfig.json
+++ b/apps/desktop/tsconfig.json
@@ -21,7 +21,7 @@
       ]
     },
     "noEmit": true,
-    "jsx": "react-jsx",
+    "jsx": "preserve",
     /* Linting */
     "strict": true,
     "noUnusedLocals": false,
